Closed Bug 1174600 Opened 10 years ago Closed 10 years ago

First AccessibleCaret jumps to top of the screen when dragging

Categories

(Core :: DOM: Selection, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: TYLin, Assigned: TYLin)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Steps to reproduce: 1. Enable "layout.accessiblecaret.enabled" 2. Make a multiple line text selection. 3. Scroll the page to make the second AccessibleCaret out of scrollport. 4. Drag the first AccessibleCaret. Actual results: The first AccessibleCaret jumps to the top of the scrollport immediately. Expected results: The first Accessiblecaret should behave normally when dragging.
When the second AccessibleCaret is out of scrollport, its logical position becomes (0, 0). Therefore we should adjust the dragging point for first AccessibleCaret only if dragDownBoundaryY > 0.
Attachment #8622280 - Flags: review?(mtseng)
Attachment #8622280 - Flags: review?(mtseng) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: