Bug 1174600 - Fix first AccessibleCarets jumps to top of the screen when dragging. r=mtseng

When the second AccessibleCaret is out of scrollport, its logical
position becomes (0, 0). Therefore we should adjust the dragging point
for first AccessibleCaret only if dragDownBoundaryY > 0.